# NextBridge

./: .codegeexignore  .dockerignore  .envrc  .gitignore  .mcp.json  AGENTS.md  Dockerfile  README.md  _libolm.py  docker-compose.yml  main.py  package.json  pnpm-lock.yaml  prek.toml  pyproject.toml  pyrightconfig.json  requirements.txt
.claude/: settings.json
.github/workflows/: docker.yml  ruff-ty-auto-fix.yml  ruff.yml
cloudflare/: richheader-worker.js  tg-avatar-proxy.js  yh-proxy.js
data/: config.json  rules.json
db/: cqface-map.yaml
docs/: configuration.md  getting-started.md  index.md  package.json  platform-support.md  pnpm-lock.yaml  rules.md  user-commands.md
docs/.vitepress/: config.mts
docs/drivers/: dingtalk.md  discord.md  feishu.md  googlechat.md  index.md  kook.md  matrix.md  mattermost.md  napcat.md  qq.md  rocketchat.md  signal.md  slack.md  teams.md  telegram.md  vocechat.md  webhook.md  whatsapp.md  yunhu.md
docs/public/: _redirects
docs/zh/: configuration.md  getting-started.md  index.md  platform-support.md  rules.md  user-commands.md
docs/zh/drivers/: dingtalk.md  discord.md  feishu.md  googlechat.md  index.md  kook.md  matrix.md  mattermost.md  napcat.md  qq.md  rocketchat.md  signal.md  slack.md  teams.md  telegram.md  vocechat.md  webhook.md  whatsapp.md  yunhu.md
drivers/: __init__.py  dingtalk.py  discord.py  feishu.py  googlechat.py  kook.py  matrix.py  mattermost.py  napcat.py  qq.py  registry.py  rocketchat.py  signal.py  slack.py  teams.py  telegram.py  vocechat.py  webhook.py  whatsapp.py  yunhu.py
scripts/: napcat_asset_url_probe.py  qq_asset_url_probe.py
services/: bridge.py  config.py  config_io.py  config_schema.py  cqface.py  db.py  db_migrations.py  error.py  http_server.py  logger.py  media.py  message.py  util.py
services/migrations/: 0-1.py  1-2.py  2-3.py  __init__.py  v0_2_to_0_3.py
templates/: napcat_forward_template.html  qq_forward_template.html
