[project]
name = "nextbridge"
version = "0.2.0"
description = "The chat bridge that links up all the major chat platforms!"
readme = "README.md"
requires-python = ">=3.13"
dependencies = [
    "discord-py>=2.6.3",
    "websockets>=13.0",
    "aiohttp>=3.10",
    "python-telegram-bot>=22.6",
    "lark-oapi>=1.5.3",
    "alibabacloud-dingtalk>=2.2.38",
    "khl-py>=0.3.17",
    "yunhu>=0.0.11",
    "pyyaml>=6.0",
    "tomli-w>=1.0",
    "mautrix>=0.21.0",
    "python-olm>=3.2.16",
    "unpaddedbase64>=2.1.0",
    "base58>=2.1.1",
    "slack-sdk>=3.40.1",
    "pydantic>=2.0",
    "google-auth>=2.0",
    "httpx[socks]>=0.28.1",
    "aiohttp-socks>=0.11.0",
    "requests[socks]>=2.32.5",
    "sqlalchemy>=2.0.48",
    "loguru>=0.7",
    "neonize>=0.3.15",
]

[[tool.uv.index]]
name = "aliyun"
url = "https://mirrors.aliyun.com/pypi/simple/"

[tool.ruff]
line-length = 88
indent-width = 4

[dependency-groups]
dev = [
    "ruff>=0.15.6",
    "ty>=0.0.23",
]
